--- a/plugins/graph_algorithm/CMakeLists.txt
+++ b/plugins/graph_algorithm/CMakeLists.txt
@@ -14,7 +14,6 @@ if(PL_GRAPH_ALGORITHM OR BUILD_ALL_PLUGINS)
     endif(HAVE_IGRAPH)
 
     include_directories(${IGRAPH_INCLUDES})
-    include_directories(${BUDDY_INCLUDE_DIR})
     include_directories(SYSTEM ${PYBIND11_INCLUDE_DIR} SYSTEM ${PYTHON_INCLUDE_DIRS})
     include_directories(AFTER "${CMAKE_CURRENT_SOURCE_DIR}/include")
 
@@ -34,7 +33,7 @@ if(PL_GRAPH_ALGORITHM OR BUILD_ALL_PLUGINS)
                                   )
         endif()
     endif(APPLE AND CMAKE_HOST_APPLE)
-    target_link_libraries(${GRAPH_ALGORITHM_LIB} ${LINK_LIBS} ${PYTHON_LIBRARIES} pybind11::pybind11 ${BUDDY_LIBRARY} ${IGRAPH_LIBRARIES})
+    target_link_libraries(${GRAPH_ALGORITHM_LIB} ${LINK_LIBS} ${PYTHON_LIBRARIES} pybind11::pybind11 ${IGRAPH_LIBRARIES})
     install(TARGETS ${GRAPH_ALGORITHM_LIB} LIBRARY DESTINATION ${PLUGIN_LIBRARY_INSTALL_DIRECTORY} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE INCLUDES DESTINATION ${PLUGIN_INCLUDE_INSTALL_DIRECTORY})
     install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION ${PLUGIN_INCLUDE_INSTALL_DIRECTORY}/graph_algorithm/include/)
     if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
