--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,16 @@
+# CMakeLists.txt -- Build system for HAL - the hardware analyzer
+#
+# Copyright (c) 2019 Sebastian Wallat <sebastian.wallat@rub.e>
+#
+# All rights reserved. Use of this source code is governed by a
+# MIT-style license that can be found in the LICENSE file.
 cmake_minimum_required(VERSION 3.15)
 
 # Include common CMake modules
 include(CMakeDependentOption)
 include(CMakeToolsHelpers OPTIONAL)
 include(CMakePrintHelpers)
+include(CMakePackageConfigHelpers)
 
 # Detect Build Type
 if(NOT CMAKE_BUILD_TYPE)
@@ -33,6 +40,31 @@ endif()
 #Add path to CMake script files and include Helper
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/" "${CMAKE_SOURCE_DIR}/deps/sanitizers-cmake/cmake/")
 
+# Define Options
+option(HAL_VERSION_MAJOR "Pass major version via cmake options" "")
+option(HAL_VERSION_MINOR "Pass minor version via cmake options" "")
+option(HAL_VERSION_PATCH "Pass patch version via cmake options" "")
+option(USE_LIBCXX "Force the use of LIBCXX for e.g. gcc" FALSE)
+option(WITH_GUI "Enable GUI build" ON)
+option(BUILD_ALL_PLUGINS "Build all available plugins" OFF)
+option(BUILD_TESTS "Enable test builds" OFF)
+option(BUILD_COVERAGE "Enable code coverage build" OFF)
+option(BUILD_DOCUMENTATION "Create and install the HTML based API documentation")
+option(ENABLE_INSTALL_LDCONFIG "When installing via make/ninja install, also install and run the LDCONFIG post_install scripts" ON)
+option(UPLOAD_PPA "Upload package to ppa" OFF)
+cmake_dependent_option(PACKAGE_DEB "Package DEB Package" ON "UPLOAD_PPA" OFF)
+cmake_dependent_option(ENABLE_PPA "Prepare PPA" ON "UPLOAD_PPA" OFF)
+option(PACKAGE_TGZ "Package TGZ archive" OFF)
+option(PACKAGE_ZIP "Package ZIP archive" OFF)
+option(PACKAGE_RPM "Package RPM package" OFF)
+option(PACKAGE_MACOS "Package for macOS" OFF)
+
+# Include Helper Modules
+include(HalUtils) # Version helper
+include(DetectDistro) # Detect distribution helper
+include(Subdirs) # Get a lost of all subdirs in specific directory
+include(find_packages)
+
 # Check for valid Changelog file ToDo
 set(DEB_CHANGELOG_REQUIRED ON)
 set(DEB_CHANGELOG "${CMAKE_CURRENT_SOURCE_DIR}/Changelog")
@@ -40,14 +72,24 @@ unset(CHANGELOG_LAST_VERSION)
 unset(CHANGELOG_LAST_MESSAGE)
 include(DebChangelog)
 
-#Set the project name
-project(hal)
+# Detect Version Information
+if((NOT ${HAL_VERSION_MAJOR}) AND ((NOT ${HAL_VERSION_MINOR}) AND (NOT ${HAL_VERSION_PATCH})))
+    hal_get_version()
+else()
+    set(HAL_VERSION_RETURN ${HAL_VERSION_MAJOR}.${HAL_VERSION_MINOR}.${HAL_VERSION_PATCH})
+endif()
+unset(HAL_VERSION_MAJOR_SELF CACHE)
+message(STATUS "HAL_VERSION: ${HAL_VERSION_RETURN}")
 
-# Include Helper Modules
-include(HalUtils) # Version helper
-include(DetectDistro) # Detect distribution helper
-include(Subdirs) # Get a lost of all subdirs in specific directory
-include(find_packages)
+################################
+#####   The project statement
+################################
+
+project(hal
+        VERSION ${HAL_VERSION_MAJOR}.${HAL_VERSION_MINOR}.${HAL_VERSION_PATCH}
+        DESCRIPTION "HAL - the hardware analyzer"
+        HOMEPAGE_URL https://github.com/emsec/hal
+        LANGUAGES CXX C)
 
 # Common Project Information
 set(PROJECT_VENDOR "hal")
@@ -64,27 +106,6 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED on)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED on)
-
-# Define Options
-option(HAL_VERSION_MAJOR "Pass major version via cmake options" "")
-option(HAL_VERSION_MINOR "Pass minor version via cmake options" "")
-option(HAL_VERSION_PATCH "Pass patch version via cmake options" "")
-option(USE_LIBCXX "Force the use of LIBCXX for e.g. gcc" FALSE)
-option(WITH_GUI "Enable GUI build" ON)
-option(BUILD_ALL_PLUGINS "Build all available plugins" OFF)
-option(BUILD_TESTS "Enable test builds" OFF)
-option(BUILD_COVERAGE "Enable code coverage build" OFF)
-option(BUILD_DOCUMENTATION "Create and install the HTML based API documentation")
-option(ENABLE_INSTALL_LDCONFIG "When installing via make/ninja install, also install and run the LDCONFIG post_install scripts" ON)
-
-# Detect Version Information
-if((NOT ${HAL_VERSION_MAJOR}) AND ((NOT ${HAL_VERSION_MINOR}) AND (NOT ${HAL_VERSION_PATCH})))
-    hal_get_version()
-else()
-    set(HAL_VERSION_RETURN ${HAL_VERSION_MAJOR}.${HAL_VERSION_MINOR}.${HAL_VERSION_PATCH})
-endif()
-unset(HAL_VERSION_MAJOR_SELF CACHE)
-message(STATUS "HAL_VERSION: ${HAL_VERSION_RETURN}")
 
 # Set Build Timestamp (used in configured file)
 string(TIMESTAMP BUILD_TIMESTAMP UTC)
@@ -121,32 +142,28 @@ find_openmp()
 
 find_package(Filesystem REQUIRED Final Experimental)
 
+set(Boost_USE_STATIC_LIBS OFF)
 set(Boost_USE_MULTITHREADED ON)
-find_package(Boost 1.58.0 COMPONENTS system REQUIRED)
-if(Boost_FOUND)
-    message(STATUS "Boost_INCLUDE_DIRS: ${Boost_INCLUDE_DIRS}")
-    message(STATUS "Boost_LIBRARIES: ${Boost_LIBRARIES}")
-    message(STATUS "Boost_VERSION: ${Boost_VERSION}")
+set(Boost_USE_STATIC_RUNTIME OFF)
+find_package(Boost 1.58.0 REQUIRED COMPONENTS system)
+message(STATUS "Boost version: ${Boost_VERSION}")
 
-    include_directories(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS})
-elseif(NOT Boost_FOUND)
-    set(missing_package "TRUE")
-    if(APPLE AND CMAKE_HOST_APPLE)
-        message(STATUS "To install boost on MacOS using homebrew run following command:")
-        message(STATUS "    brew install boost --c++11")
-    endif(APPLE AND CMAKE_HOST_APPLE)
-endif(Boost_FOUND)
+if(NOT TARGET Boost::system)
+    add_library(Boost::system IMPORTED INTERFACE)
+    set_property(TARGET Boost::filesystem PROPERTY
+                 INTERFACE_INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR})
+    set_property(TARGET Boost::system PROPERTY
+                 INTERFACE_LINK_LIBRARIES ${Boost_LIBRARIES})
+endif()
 
 find_package(RapidJSON REQUIRED)
 message(STATUS "Found rapidjson ${RAPIDJSON_INCLUDEDIR}")
-include_directories(${RAPIDJSON_INCLUDEDIR})
 
 # Need Version 2.2.4 Not available in ubuntu bionic
 find_package(pybind11 2.4.3 CONFIG)
 if(${pybind11_FOUND})
     message(STATUS "Found pybind11 v${pybind11_VERSION}: ${pybind11_INCLUDE_DIRS}")
     message(STATUS "Found pybind11 >= 2.4.3")
-    include_directories(pybind11_INCLIDE_DIRS)
 else()
     message(STATUS "pybind11 >= 2.4.3 not found")
     add_subdirectory(deps/pybind11)
@@ -158,8 +175,57 @@ if(${spdlog_FOUND})
     message(STATUS "Found spdlog >= 1.4.2")
 else()
     message(STATUS "spdlog >= 1.4.2 not found")
-    include_directories(${include_directories} "${CMAKE_CURRENT_SOURCE_DIR}/deps/spdlog-1.4.2/include")
+    #    include_directories(${include_directories} "${CMAKE_CURRENT_SOURCE_DIR}/deps/spdlog-1.4.2/include")
     set(spdlog_VERSION 1.4.2)
+endif()
+
+#Python support
+set(Python_ADDITIONAL_VERSIONS 3.5 3.6)
+find_package(PythonInterp 3.5 REQUIRED)
+if(PythonInterp_FOUND)
+    message(STATUS "PYTHON_INCLUDE_DIRS: ${PYTHON_INCLUDE_DIRS}")
+    message(STATUS "PYTHON_LIBRARIES: ${PYTHON_LIBRARIES}")
+    message(STATUS "PYTHON_MODULE_PREFIX: ${PYTHON_MODULE_PREFIX}")
+    message(STATUS "PYTHON_MODULE_EXTENSION: ${PYTHON_MODULE_EXTENSION}")
+elseif(NOT PythonInterp_FOUND)
+    set(Missing_package "TRUE")
+    if(APPLE AND CMAKE_HOST_APPLE)
+        message(STATUS "To install python3 on MacOS using homebrew run following command:")
+        message(STATUS "    brew install python3")
+    endif(APPLE AND CMAKE_HOST_APPLE)
+endif(PythonInterp_FOUND)
+
+if(WITH_GUI)
+    # We require qt5 widgets
+    find_package(Qt5Widgets)
+    if(Qt5Widgets_FOUND)
+        message(STATUS "Qt5Widgets_INCLUDE_DIRS: ${Qt5Widgets_INCLUDE_DIRS}")
+        message(STATUS "Qt5Widgets_LIBRARIES: ${Qt5Widgets_LIBRARIES}")
+    elseif(NOT Qt5Widgets_FOUND)
+        set(Missing_package "TRUE")
+        if(APPLE AND CMAKE_HOST_APPLE)
+            message(STATUS "To install qt5 on MacOS using homebrew run following command:")
+            message(STATUS "    brew install qt")
+        endif(APPLE AND CMAKE_HOST_APPLE)
+    endif(Qt5Widgets_FOUND)
+    find_package(Qt5Concurrent)
+    if(Qt5Concurrent_FOUND)
+        message(STATUS "Qt5Concurrent_INCLUDE_DIRS: ${Qt5Concurrent_INCLUDE_DIRS}")
+        message(STATUS "Qt5Concurrent_LIBRARIES: ${Qt5Concurrent_LIBRARIES}")
+    elseif(NOT Qt5Concurrent_FOUND)
+        set(Missing_package "TRUE")
+        if(APPLE AND CMAKE_HOST_APPLE)
+            message(STATUS "To install qt5 on MacOS using homebrew run following command:")
+            message(STATUS "    brew install qt5")
+        endif(APPLE AND CMAKE_HOST_APPLE)
+    endif(Qt5Concurrent_FOUND)
+    find_package(Qt5Svg)
+    if(Qt5Svg_FOUND)
+        message(STATUS "Qt5Svg_INCLUDE_DIRS: ${Qt5Svg_INCLUDE_DIRS}")
+        message(STATUS "Qt5Svg_LIBRARIES: ${Qt5Svg_LIBRARIES}")
+    elseif(NOT Qt5Svg_FOUND)
+        set(Missing_package "TRUE")
+    endif(Qt5Svg_FOUND)
 endif()
 
 ################################
@@ -270,6 +336,7 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/hal.pc.in ${CMAKE_BINARY_DIR}/hal.pc 
 
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/include/ DESTINATION ${INCLUDE_INSTALL_DIRECTORY})
 install(DIRECTORY ${CMAKE_BINARY_DIR}/share/hal/gate_libraries DESTINATION ${SHARE_INSTALL_DIRECTORY} PATTERN "*.json")
+install(DIRECTORY ${CMAKE_BINARY_DIR}/share/hal/gate_libraries DESTINATION ${SHARE_INSTALL_DIRECTORY} PATTERN "*.lib")
 configure_file("defaults/guidefaults.ini" ${CMAKE_BINARY_DIR}/share/hal/defaults/guidefaults.ini @ONLY)
 install(DIRECTORY ${CMAKE_BINARY_DIR}/share/hal/defaults DESTINATION ${SHARE_INSTALL_DIRECTORY} PATTERN "*.ini")
 install(FILES ${CMAKE_BINARY_DIR}/hal.pc DESTINATION "${PKGCONFIG_INSTALL_DIRECTORY}")
@@ -278,7 +345,7 @@ message(STATUS "PKGCONFIG_INSTALL_DIRECTORY ${PKGCONFIG_INSTALL_DIRECTORY}")
 # Configure LDCONFIG for HAL plugins
 if(LINUX)
     configure_file(
-            "installer/deb/hal.conf.in"
+            "${CMAKE_SOURCE_DIR}/packaging/deb/hal.conf.in"
             "${CMAKE_BINARY_DIR}/hal.conf"
             @ONLY)
     install(FILES "${CMAKE_BINARY_DIR}/hal.conf" DESTINATION "${SHARE_INSTALL_DIRECTORY}/ld_conf/")
@@ -286,16 +353,16 @@ endif()
 
 # on make/ninja install run configure and run ldconfig
 if(ENABLE_INSTALL_LDCONFIG AND LINUX)
-        configure_file(
-                "cmake/post_install.cmake.in"
-                "${CMAKE_BINARY_DIR}/post_install.cmake"
-                @ONLY)
-        install(SCRIPT "${CMAKE_BINARY_DIR}/post_install.cmake")
+    configure_file(
+            "${CMAKE_SOURCE_DIR}/cmake/post_install.cmake.in"
+            "${CMAKE_BINARY_DIR}/post_install.cmake"
+            @ONLY)
+    install(SCRIPT "${CMAKE_BINARY_DIR}/post_install.cmake")
 endif()
 
 # add uninstall target
 configure_file(
-        "cmake/uninstall.cmake.in"
+        "${CMAKE_SOURCE_DIR}/cmake/uninstall.cmake.in"
         "${CMAKE_BINARY_DIR}/uninstall.cmake"
         @ONLY)
 add_custom_target(uninstall "${CMAKE_COMMAND}" -P "${CMAKE_BINARY_DIR}/uninstall.cmake")
@@ -303,102 +370,9 @@ add_custom_target(uninstall "${CMAKE_COMMAND}" -P "${CMAKE_BINARY_DIR}/uninstall
 ################################
 #####   Packaging
 ################################
-
-if(UPLOAD_PPA)
-    set(PACKAGE_DEB ON)
-    set(ENABLE_PPA ON)
-endif()
-
-set(CPACK_GENERATORS)
-if(PACKAGE_TGZ)
-    list(APPEND CPACK_GENERATORS "TGZ")
-endif()
-if(PACKAGE_ZIP)
-    list(APPEND CPACK_GENERATORS "ZIP")
-endif()
-if(PACKAGE_DEB)
-    list(APPEND CPACK_GENERATORS "DEB")
-endif()
-if(PACKAGE_RPM)
-    list(APPEND CPACK_GENERATORS "RPM")
-endif()
-if(PACKAGE_MACOS)
-    list(APPEND CPACK_GENERATORS "productbuild")
-    set(PACKAGE_APPENDIX "macOS_${ARCHITECTURE}")
-endif()
-message(STATUS "CPACK_GENERATOR: ${CPACK_GENERATOR}")
-
-if(CPACK_GENERATORS)
-    set(CPACK_GENERATOR "${CPACK_GENERATORS}")
-    set(CPACK_SOURCE_IGNORE_FILES
-        "/mxe/"
-        "/\\\\.vscode/"
-        "/\\\\.codelite/"
-        "/\\\\.idea/"
-        "/cmake-.*/"
-        "\\\\.project$"
-        "\\\\.workspace$"
-        "\\\\.iml$"
-        "\\\\.mk$"
-        "\\\\.astylerc$"
-        "\\\\.editorconfig$"
-        "/Makefile$"
-        )
-    set(PROJECT_ARCH "${CMAKE_SYSTEM_PROCESSOR}")
-    message(STATUS "PROJECT_ARCH: ${PROJECT_ARCH}")
-    add_subdirectory(installer)
-endif(CPACK_GENERATORS)
+add_subdirectory(packaging)
 
 ################################
 #####   Documentation
 ################################
-if(BUILD_DOCUMENTATION)
-    find_package(Doxygen REQUIRED)
-
-    set(doxyfile "documentation/Doxyfile")
-
-    configure_file(${doxyfile} ${doxyfile} @ONLY)
-
-    add_custom_target(doc
-                      COMMAND ${DOXYGEN_EXECUTABLE} ${doxyfile}
-                      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-                      COMMENT "Generating API documentation with Doxygen"
-                      VERBATIM)
-
-    find_package(Sphinx REQUIRED)
-    if(NOT DEFINED SPHINX_THEME)
-        set(SPHINX_THEME default)
-    endif()
-
-    if(NOT DEFINED SPHINX_THEME_DIR)
-        set(SPHINX_THEME_DIR)
-    endif()
-
-    # configured documentation tools and intermediate build results
-    set(BINARY_BUILD_DIR "${CMAKE_CURRENT_BINARY_DIR}/python-doc/_build")
-
-    # Sphinx cache with pickled ReST documents
-    set(SPHINX_CACHE_DIR "${CMAKE_CURRENT_BINARY_DIR}/python-doc/_doctrees")
-
-    # HTML output directory
-    set(SPHINX_HTML_DIR "${CMAKE_CURRENT_BINARY_DIR}/python-doc/html")
-
-    configure_file(
-            "documentation/sphinx_doc/conf.py.in"
-            "${BINARY_BUILD_DIR}/conf.py"
-            @ONLY)
-
-    file(GLOB_RECURSE SPHINX_DOC_FILES ${CMAKE_SOURCE_DIR}/documentation/sphinx_doc/*.rst)
-    message(STATUS "SPHINX_DOC_FILES: ${SPHINX_DOC_FILES}")
-
-    add_custom_target(hal_py_docs ALL
-                      ${SPHINX_EXECUTABLE}
-                      -q -b html
-                      -c "${BINARY_BUILD_DIR}"
-                      -d "${SPHINX_CACHE_DIR}"
-                      "${CMAKE_CURRENT_SOURCE_DIR}/documentation/sphinx_doc/"
-                      "${SPHINX_HTML_DIR}"
-                      COMMENT "Building HTML documentation with Sphinx" VERBATIM
-                      DEPENDS hal_py graph_algorithm ${SPHINX_DOC_FILES})
-
-endif()
+add_subdirectory(documentation)
