--- a/tests/netlist/CMakeLists.txt
+++ b/tests/netlist/CMakeLists.txt
@@ -20,14 +20,8 @@ add_executable(runTest-gate_library_manager
         gate_library_manager.cpp)
 add_executable(runTest-netlist_serializer
         netlist_serializer.cpp)
-#add_executable(runTest-gate_event_handler
-#               gate_event_handler.cpp)
-#add_executable(runTest-net_event_handler
-#               net_event_handler.cpp)
-#add_executable(runTest-module_event_handler
-#               module_event_handler.cpp)
-#add_executable(runTest-netlist_event_handler
-#               netlist_event_handler.cpp)
+add_executable(runTest-boolean_function
+        boolean_function.cpp)
 
 
 target_link_libraries(runTest-netlist   gtest gtest_main ${LINK_LIBS} test_utils)
@@ -40,10 +34,7 @@ target_link_libraries(runTest-module  gtest gtest_main ${LINK_LIBS} test_utils)
 target_link_libraries(runTest-netlist_factory  gtest gtest_main ${LINK_LIBS} test_utils)
 target_link_libraries(runTest-gate_library_manager  gtest gtest_main ${LINK_LIBS} test_utils)
 target_link_libraries(runTest-netlist_serializer  gtest gtest_main ${LINK_LIBS} test_utils)
-#target_link_libraries(runTest-gate_event_handler   gtest gtest_main ${LINK_LIBS} test_utils)
-#target_link_libraries(runTest-net_event_handler   gtest gtest_main ${LINK_LIBS} test_utils)
-#target_link_libraries(runTest-module_event_handler   gtest gtest_main ${LINK_LIBS} test_utils)
-#target_link_libraries(runTest-netlist_event_handler   gtest gtest_main ${LINK_LIBS} test_utils)
+target_link_libraries(runTest-boolean_function  gtest gtest_main ${LINK_LIBS} test_utils)
 
 add_test(runTest-netlist ${CMAKE_BINARY_DIR}/bin/runTest-netlist --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
 add_test(runTest-gate ${CMAKE_BINARY_DIR}/bin/runTest-gate --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
@@ -55,7 +46,5 @@ add_test(runTest-module ${CMAKE_BINARY_DIR}/bin/runTest-module --gtest_output=xm
 add_test(runTest-netlist_factory ${CMAKE_BINARY_DIR}/bin/runTest-netlist_factory --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
 add_test(runTest-gate_library_manager ${CMAKE_BINARY_DIR}/bin/runTest-gate_library_manager --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
 add_test(runTest-netlist_serializer ${CMAKE_BINARY_DIR}/bin/runTest-netlist_serializer --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
-#add_test(runTest-gate_event_handler ${CMAKE_BINARY_DIR}/bin/runTest-gate_event_handler --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
-#add_test(runTest-net_event_handler ${CMAKE_BINARY_DIR}/bin/runTest-net_event_handler --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
-#add_test(runTest-module_event_handler ${CMAKE_BINARY_DIR}/bin/runTest-module_event_handler --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
-#add_test(runTest-netlist_event_handler ${CMAKE_BINARY_DIR}/bin/runTest-netlist_event_handler --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
+add_test(runTest-boolean_function ${CMAKE_BINARY_DIR}/bin/runTest-boolean_function --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
+
