Changed main target back to hal

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,14 +1,14 @@
 set(SRC main.cpp)
 
-add_executable(hal_app ${SRC})
-set_target_properties(hal_app PROPERTIES OUTPUT_NAME "hal")
-set_target_properties(hal_app PROPERTIES ENABLE_EXPORTS 1)
+add_executable(hal ${SRC})
+set_target_properties(hal PROPERTIES OUTPUT_NAME "hal")
+set_target_properties(hal PROPERTIES ENABLE_EXPORTS 1)
 if(WITH_GUI)
-    target_compile_definitions(hal_app PUBLIC WITH_GUI)
+    target_compile_definitions(hal PUBLIC WITH_GUI)
 endif(WITH_GUI)
-target_compile_definitions(hal_app PUBLIC SPDLOG_TRACE_ON)
-target_link_libraries(hal_app hal::core hal::netlist)
-install(TARGETS hal_app RUNTIME DESTINATION ${BINARY_INSTALL_DIRECTORY} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE INCLUDES DESTINATION ${INCLUDE_INSTALL_DIRECTORY})
+target_compile_definitions(hal PUBLIC SPDLOG_TRACE_ON)
+target_link_libraries(hal hal::core hal::netlist)
+install(TARGETS hal RUNTIME DESTINATION ${BINARY_INSTALL_DIRECTORY} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE INCLUDES DESTINATION ${INCLUDE_INSTALL_DIRECTORY})
 if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
-    add_sanitizers(hal_app)
+    add_sanitizers(hal)
 endif()
